Added Nav bar and placeholders for content on sheets

--- a/about-us.html
+++ b/about-us.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Muscle Valley Gym</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html">
+                <h2 id="company-name">Muscle Valley Gym</h2>
+            </a>
+
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="join-us.html">Join Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+            Hero Image
+    </section>
+
+    <section>
+       About us, discussing culture along with classes that are available 
+    </section>
+
+    <footer>
+        Include Map, Contact details and social media links
+    </footer>
     
 </body>
 </html>
