Added Logo into header of all sheets

--- a/join-us.html
+++ b/join-us.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- External Style Sheet -->
+    <link 
+        href="assets/css/style.css"
+        rel="stylesheet" 
+        type="text/css"/>
+
     <title>Muscle Valley Gym</title>
 </head>
 <body>
+    <!-- Navitation Bar -->
     <header>
         <nav>
             <a href="index.html">
-                <h2 id="company-name">Muscle Valley Gym</h2>
+                <h2 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="assets/images/musclevalleylogo.png"></h2>
             </a>
 
             <ul id="menu">
