Added Social Media links to footer

--- a/about-us.html
+++ b/about-us.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome -->
+     <script 
+        src="https://kit.fontawesome.com/7d5ddd03f5.js" 
+        crossorigin="anonymous"
+    ></script>
         
     <!-- External Style Sheet -->
     <link 
         href="assets/css/style.css"
         rel="stylesheet" 
-        type="text/css"/>
+        type="text/css"
+    />
 
     <title>Muscle Valley Gym</title>
 </head>
 <body>
+    <!-- Navitation Bar -->
     <header>
         <nav>
             <a href="index.html">
@@ -37,7 +45,12 @@
     </section>
 
     <footer>
-        Include Map, Contact details and social media links
+        <ul class="social-media">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
+        </ul>
     </footer>
     
 </body>
