Added contact details to each page

--- a/join-us.html
+++ b/join-us.html
@@ -41,6 +41,19 @@
     </section>
 
     <footer>
+
+        <div class="contact-details">
+            <p>
+                Muscle Valley Gym <br>
+                Withey Dyffryn Court <br>
+                Alder Ave <br>
+                Ystrad Mynach <br>
+                Hengoed <br>
+                CF82 7TT <br> <br>
+                Tel: 02920 xxxxxx
+            </p>
+        </div>
+
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
