Added gym location container & google maps png

--- a/join-us.html
+++ b/join-us.html
@@ -41,7 +41,7 @@
     </section>
 
     <footer>
-
+        <div class="gym-location"></div>
         <div class="contact-details">
             <p>
                 Muscle Valley Gym <br>
@@ -53,7 +53,6 @@
                 Tel: 02920 xxxxxx
             </p>
         </div>
-
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
