--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
     </section>
 
     <footer>
-
+        <div class="gym-location"></div>
         <div class="contact-details">
             <p>
                 Muscle Valley Gym <br>
@@ -57,7 +57,6 @@
                 Tel: 02920 xxxxxx
             </p>
         </div>
-
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
