Added Opening Times into Footer

--- a/about-us.html
+++ b/about-us.html
@@ -57,6 +57,16 @@
                 Tel: 02920 xxxxxx
             </p>
         </div>
+        <div class="opening-times">
+            <p>
+                <h4>Opening Hours</h4>
+                Weekdays: 5am - 10pm <br>
+                Weekends: 6am - 9pm <br>
+            </p>
+            <p class="bank-holiday-exclude">
+                <em>**Bank Holidays may vary please call us for further details.</em>
+            </p>
+        </div>
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
