--- a/index.html
+++ b/index.html
@@ -52,13 +52,23 @@
         <div class="gym-location"></div>
         <div class="contact-details">
             <p>
-                Muscle Valley Gym <br>
+                <h4>Muscle Valley Gym</h4>
                 Withey Dyffryn Court <br>
                 Alder Ave <br>
                 Ystrad Mynach <br>
                 Hengoed <br>
-                CF82 7TT <br> <br>
+                CF82 7TT <br>
                 Tel: 02920 xxxxxx
+            </p>
+        </div>
+        <div class="opening-times">
+            <p>
+                <h4>Opening Hours</h4>
+                Weekdays: 5am - 10pm <br>
+                Weekends: 6am - 9pm <br>
+            </p>
+            <p class="bank-holiday-exclude">
+                <em>**Bank Holidays may vary please call us for further details.</em>
             </p>
         </div>
         <ul class="social-media">
