Bug-Fix connection to external stylesheet

--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
         
     <!-- External Style Sheet -->
     <link 
-        href="assets/css/style.css"
+        href="./assets/css/style.css"
         rel="stylesheet" 
         type="text/css"
     />
