Add Hero Img to Index & Join-us banner

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <h2 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="assets/images/musclevalleylogo.png"></h2>
+                <h2 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="./assets/images/musclevalleylogo.png"></h2>
             </a>
 
             <ul id="menu">
@@ -36,8 +36,18 @@
         </nav>
     </header>
 
-    <section>
-            <p>Hero Image</p>
+    <!-- Hero Image -->
+    <section id="home-hero-outer">
+            <img 
+                src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
+                alt="" 
+                width="2400" 
+                height="1602"
+                id="home-hero-image"
+            >
+            <div id="join-us">
+                <h3>Join Us</h3>
+            </div>
     </section>
 
     <section>
