--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <!-- Bootstrap CSS -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous"
+    />
 
     <!-- Font Awesome -->
     <script 
@@ -25,7 +33,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <h2 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="./assets/images/musclevalleylogo.png"></h2>
+                <h1 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="./assets/images/musclevalleylogo.png"></h1>
             </a>
 
             <ul id="menu">
@@ -37,19 +45,90 @@
     </header>
 
     <!-- Hero Image -->
-    <section id="home-hero-outer">
+    <section class="home-hero-outer">
+        <div class="home-hero-inner">
             <img 
                 src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
                 alt="" 
-                id="home-hero-image"
+                class="home-hero-image"
             >
-            <div id="join-us">
-                <h3>Join Us</h3>
-            </div>
+            <h2 id="join-us">Join Us</h2>
+        </div>
     </section>
 
-    <section>
-        Classes available Carousel
+    <section id="carousel-outer">
+        <h2 class="carousel-header">What's going on?</h2>
+        <div id="classesAvailableCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="7" aria-label="Slide 8"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/images/trust-tru-katsande-A_ftsTh53lM-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Cycling</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/anupam-mahapatra-Vz0RbclzG_w-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Yoga</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/jonathan-borba-R0y_bEUjiOM-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Personal Training</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/sule-makaroglu-YFmvjO3TP_s-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Workout Machines</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/sushil-ghimire-eFx1KZhaSvo-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Free-Weights</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/sven-mieke-Lx_GDv7VA9M-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Aerobics</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/sherise-vd-Atohf63B8Dg-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Club Running</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/omar-lopez-vsgdG95Ehyo-unsplash.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-md-block">
+                  <p class="carousel-text">Quarterly Socials</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          
     </section>
 
     <section>
@@ -86,5 +165,20 @@
             <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
         </ul>
     </footer>
+
+    <script 
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" 
+        crossorigin="anonymous"
+    ></script>
+
+     <!-- Bootstrap 5 JS -->
+
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" 
+        crossorigin="anonymous"
+    ></script>
+
 </body>
 </html>
