feat: add slogan to hero img & style

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <!-- Hero Image -->
     <section class="home-hero-outer">
         <div class="home-hero-inner">
+            <h2 class="gym-slogan">The Welsh Answer to Muscle Beach</h2>
             <img 
                 src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
                 alt="" 
