--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 alt="" 
                 class="home-hero-image"
             >
-            <h2 id="join-us">Join Us</h2>
+            <h2 id="join-us"><a href="join-us.html">Join Us</a></h2>
         </div>
     </section>
 
