--- a/about-us.html
+++ b/about-us.html
@@ -36,12 +36,55 @@
         </nav>
     </header>
 
-    <section>
-        Hero Image
+    <section id="about-outer-hero">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
     </section>
 
     <section>
-       About us, discussing culture along with classes that are available 
+        <div class="about-us-description">
+            <div class="about-us-text">
+                <p>
+                    Situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym. 
+                </p>
+                <br>
+                <p>The idea of the gym came from the COVID-19 pandemic where we found that previous office based workers,
+                    were missing out on the culture of the workplace where they could engage with peers. 
+                    We thought why not combine culture with fitness, promoting all aspects of health physical and mental.
+                </p>
+            </div>
+            <img 
+                src="./assets/images/victor-freitas-nlZTjUZX2qo-unsplash.jpg" 
+                alt=""
+                class="about-us-coaching"
+            />
+        </div>
+        <div class="about-us-services">
+            <img 
+                src="./assets/images/gabin-vallet-J154nEkpzlQ-unsplash.jpg" 
+                alt=""
+                class="about-us-group"
+            />
+            <div class="services">
+                <h4>The Services we provide:</h4>
+                <ul class="services-list">
+                    <li>Group Classes</li>
+                    <li>Personal Trainers</li>
+                    <li>Rehabilitation & Injury Recovery</li>
+                    <li>Nutritional Advise</li>
+                    <li>Club Running</li>
+                    <li>Inhouse competitions</li>
+                    <li>Personal Trainers</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <footer>
