feat: add acces tags & alt descript, amended text in carousel

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="muscle, valley">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SOCIAL MEDIA TAGS -->
+    <meta property="og:type" content="business"/>
+    <meta property="og:title" content="Muscle Valley Gym"/>
+    <meta property="og:description" content=""/>
+
+    <meta name="twitter:title" content="Muscle Valley Gym"/>
+    <meta name="twitter:description" content=""/>
 
       <!-- Bootstrap CSS -->
     <link 
@@ -33,7 +43,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <h1 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="./assets/images/musclevalleylogo.png"></h1>
+                <h1 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="./assets/images/musclevalleylogo.png" alt="The Muscle Valley Logo, showing a dumbell on a slant before two mountains representing a valley."></h1>
             </a>
 
             <ul id="menu">
@@ -52,13 +62,14 @@
                 src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
                 alt="" 
                 class="home-hero-image"
+                alt="A photo of an open gym, where people are standing around ready to move onto the next work station in a large circle awaiting for the instructors signal to move. "
             >
             <h2 id="join-us"><a href="join-us.html">Join Us</a></h2>
         </div>
     </section>
 
     <section id="carousel-outer">
-        <h2 class="carousel-header">What's going on?</h2>
+        <h2 class="carousel-header">What's going on in the gym?</h2>
         <div id="classesAvailableCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -104,7 +115,7 @@
               <div class="carousel-item">
                 <img src="./assets/images/sven-mieke-Lx_GDv7VA9M-unsplash.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-md-block">
-                  <p class="carousel-text">Aerobics</p>
+                  <p class="carousel-text">High Intensity Training</p>
                 </div>
               </div>
               <div class="carousel-item">
