--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <section id="carousel-outer">
-        <h2 class="carousel-header">What's going on in the gym?</h2>
+        <h2 class="carousel-header">Check out below what we offer</h2>
         <div id="classesAvailableCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -127,7 +127,7 @@
               <div class="carousel-item">
                 <img src="./assets/images/omar-lopez-vsgdG95Ehyo-unsplash.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-md-block">
-                  <p class="carousel-text">Quarterly Socials</p>
+                  <p class="carousel-text">Social Events</p>
                 </div>
               </div>
             </div>
