--- a/join-us.html
+++ b/join-us.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+       <!-- Bootstrap CSS -->
+       <link 
+       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+       rel="stylesheet" 
+       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+       crossorigin="anonymous"
+   />
+
     <!-- Font Awesome -->
     <script 
         src="https://kit.fontawesome.com/7d5ddd03f5.js" 
@@ -38,13 +46,49 @@
 
     <section class="join-us-hero">
         <div class="membership-options">
-
+            <div class="membership-levels">
+                <h4>Club Membership</h4>
+                <ul>
+                    <li>Unlimited Access to Club Running</li>
+                    <li>Nutritional Advice</li>
+                    <li>Personalised Fitness Plan</li>
+                </ul>
+                <p>Only <span class="membership-price">£10.00</span> Per Month!</p>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
+            </div>
+            <div class="membership-levels">
+                <h4>Basic Membership</h4>
+                <ul>
+                    <li>Unlimited Access to the Gym</li>
+                    <li>Unlimited Access to the Group Classes</li>
+                    <li>Unlimited Access to Club Running</li>
+                    <li>Nutritional Advice</li>
+                    <li>Personalised Fitness Plan</li>
+                </ul>
+                <p>Only <span class="membership-price">£20.00</span> Per Month!</p>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
+            </div>
+            <div class="membership-levels">
+                <h4>Comprehensive Membership</h4>
+                <ul>
+                    <li>Unlimited Access to the Gym</li>
+                    <li>Unlimited Access to the Group Classes</li>
+                    <li>Unlimited Access to Club Running</li>
+                    <li>Up to 4 Personal Training Sessions Per Week</li>
+                    <li>Access to the Rehabilitation & Injury Recovery Center</li>
+                    <li>Nutritional Advice</li>
+                    <li>Personalised Fitness Plan</li>
+                </ul>
+                <p>Only <span class="membership-price">40.00</span> Per Month!</p>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
+            </div>
         </div>
-        <div class="modal" tabindex="-1">
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Join Us Now!</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Join Us Now!!</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -76,9 +120,12 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
               </div>
             </div>
-        </div>
+          </div>
     </section>
 
     <footer>
@@ -111,6 +158,10 @@
             <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
         </ul>
     </footer>
+
+ <!-- Bootstrap 5 JS -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     
 </body>
 </html>
