feat: add radio buttons in modal for membership options

--- a/join-us.html
+++ b/join-us.html
@@ -113,9 +113,14 @@
                             <label for="repeatPassword" class="form-label"> Repeat Password</label>
                             <input type="password" class="form-control" id="repeatPassword" required>
                         </div>
-                        <div class="mb-3 form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <div class="mb-3">
+                            <label for="club">Club</label>
+                            <input type="radio" id="club" name="membership-level" value="club" required>
+                            <label for="basic">Basic</label>
+                            <input type="radio" id="basic" name="membership-level" value="basic" required>
+                            <label for="comprehensive">Comprehensive</label>
+                            <input type="radio" id="comprehensive" name="membership-level" value="comprehensive" required>
+                          
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
