feat: add viewport class to html,body & fix typo missing £

--- a/join-us.html
+++ b/join-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-viewport">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
 
     <title>Muscle Valley Gym</title>
 </head>
-<body>
+<body class="full-viewport">
     <!-- Navitation Bar -->
     <header>
         <nav>
@@ -79,7 +79,7 @@
                     <li>Nutritional Advice</li>
                     <li>Personalised Fitness Plan</li>
                 </ul>
-                <p>Only <span class="membership-price">40.00</span> Per Month!</p>
+                <p>Only <span class="membership-price">£40.00</span> Per Month!</p>
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="join-us-button">Join us</button>
             </div>
         </div>
