feat: add sr text to social media links to all sheets

--- a/join-us.html
+++ b/join-us.html
@@ -157,10 +157,10 @@
             </p>
         </div>
         <ul class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
+            <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Twitter page.</span><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Instagram page.</span><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Tik-Tok page.</span><i class="fab fa-tiktok"></i></a> </li>
         </ul>
     </footer>
 
