--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Bootstrap CSS -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous"
+    /> 
+
     <!-- Font Awesome -->
      <script 
         src="https://kit.fontawesome.com/7d5ddd03f5.js" 
@@ -111,10 +119,10 @@
             </p>
         </div>
         <ul class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
+            <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Twitter page.</span><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Instagram page.</span><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Tik-Tok page.</span><i class="fab fa-tiktok"></i></a> </li>
         </ul>
     </footer>
     
