--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:title" content="Muscle Valley Gym"/>
     <meta name="twitter:description" content=""/>
 
-      <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -190,10 +190,10 @@
             </p>
         </div>
         <ul class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a> </li>
+            <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Twitter page.</span><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Instagram page.</span><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Tik-Tok page.</span><i class="fab fa-tiktok"></i></a> </li>
         </ul>
     </footer>
 
