feat: chng testimonial names to use CSS instead of hmtl tags

--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
           <div class="testimonial">
             <p>Going to a gym can be really intimidating, from the start this gym has not only been welcoming but extremely supportive. 
               Regardless of ability or fitness there's a sense of community about this gym! 
-              <br><br><strong><em>Bryony 2021</em></strong>
+              <br><br><span class="testimonial-person">Bryony 2021</span>
             </p>
           </div>
           <div class="testimonial">
             <p>There's something for everyone at Muscle Valley Gym, if your experienced or just starting out they got you covered. 
               The persoanl trainers are approachable, engaging and around throughout the day always on hand for advice, spotting or just a chat never feels rushed. 
-              <br><br><strong><em>Adam 2021</em></strong>
+              <br><br><span class="testimonial-person">Adam 2021</span>
             </p>
           </div>
           <div class="testimonial">
             <p>I haven't been into fitness much as I find it a chore, since going to Muscle Valley it's much more than a gym. 
               From the various events from fitness to socials gives a club feeling, where we can meet other similar minded people.
-              <br><br><strong><em>Helen 2021</em></strong>
+              <br><br><span class="testimonial-person">Helen 2021</span>
             </p>
           </div>
         </div>
