--- a/join-us.html
+++ b/join-us.html
@@ -102,25 +102,30 @@
                             <input type="text" class="form-control" id="lastName" required>
                         </div>
                         <div class="mb-3">
-                          <label for="email" class="form-label">Email address</label>
+                          <label for="email" class="form-label">Email Address</label>
                           <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="mb-3">
-                          <label for="password" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="password" required>
+                          <label for="phone" class="form-label">Telephone Number</label>
+                          <input type="tel" class="form-control" id="phone" required>
                         </div>
                         <div class="mb-3">
-                            <label for="repeatPassword" class="form-label"> Repeat Password</label>
-                            <input type="password" class="form-control" id="repeatPassword" required>
+                            <label for="text" class="form-label">What Are Your Fitness Goals?</label>
+                            <input type="text" class="form-control" id="text" required>
                         </div>
-                        <div class="mb-3">
-                            <label for="club">Club</label>
-                            <input type="radio" id="club" name="membership-level" value="club" required>
-                            <label for="basic">Basic</label>
-                            <input type="radio" id="basic" name="membership-level" value="basic" required>
-                            <label for="comprehensive">Comprehensive</label>
-                            <input type="radio" id="comprehensive" name="membership-level" value="comprehensive" required>
-                          
+                        <div class="mb-3 radio-buttons">
+                            <div>
+                                <input type="radio" id="club" name="membership-level" value="club" required>
+                                <label for="club">Club</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="basic" name="membership-level" value="basic" required>
+                                <label for="basic">Basic</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="comprehensive" name="membership-level" value="comprehensive" required>
+                                <label for="comprehensive">Comprehensive</label>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
