feat: add active sheet to nav

--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
 
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#" class="active-sheet">About Us</a></li>
                 <li><a href="join-us.html">Join Us</a></li>
             </ul>
         </nav>
