--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </a>
 
             <ul id="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active-sheet">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="join-us.html">Join Us</a></li>
             </ul>
