--- a/join-us.html
+++ b/join-us.html
@@ -39,7 +39,7 @@
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
-                <li><a href="#">Join Us</a></li>
+                <li><a href="#" class="active-sheet">Join Us</a></li>
             </ul>
         </nav>
     </header>
