feat: add sheet name to the title in head

--- a/join-us.html
+++ b/join-us.html
@@ -26,7 +26,7 @@
         type="text/css"
     />
 
-    <title>Muscle Valley Gym</title>
+    <title>Muscle Valley Gym | Join-Us</title>
 </head>
 <body class="full-viewport">
     <!-- Navitation Bar -->
