--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
         type="text/css"
     />
 
-    <title>Muscle Valley Gym</title>
+    <title>Muscle Valley Gym | About-Us</title>
 </head>
 <body>
     <!-- Navitation Bar -->
