--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         type="text/css"
     />
         
-    <title>Muscle Valley Gym</title>
+    <title>Muscle Valley Gym | Home</title>
 </head>
 <body>
     <!-- Navitation Bar -->
