fix: chng video to be responsive with css

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="video-viewport">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
 
     <title>Muscle Valley Gym | About-Us</title>
 </head>
-<body>
+<body class="video-viewport">
     <!-- Navitation Bar -->
     <header>
         <nav>
@@ -46,8 +46,6 @@
 
     <section id="about-outer-hero">
         <iframe 
-            width="560" 
-            height="315" 
             src="https://www.youtube.com/embed/JxvVke8vzhY?autoplay=1&mute=1" 
             title="YouTube video player" 
             frameborder="0" 
