feat: add alt text to img & rm em HTML tags

--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <h1 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="assets/images/musclevalleylogo.png"></h1>
+                <h1 id="company-name">Muscle Valley Gym<img id="muscle-valley-logo" src="assets/images/musclevalleylogo.png" alt="The Muscle Valley Logo, showing a dumbell on a slant before two mountains representing a valley."></h1>
             </a>
 
             <ul id="menu">
@@ -112,9 +112,7 @@
                 Weekdays: 5am - 10pm <br>
                 Weekends: 6am - 9pm <br>
             </p>
-            <p class="bank-holiday-exclude">
-                <em>**Bank Holidays may vary please call us for further details.</em>
-            </p>
+            <p class="bank-holiday-exclude">**Bank Holidays may vary please call us for further details.</p>
         </div>
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
