--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
-    <meta name="keywords" content="muscle, valley">
+    <meta name="keywords" content="muscle, valley, gym">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SOCIAL MEDIA TAGS -->
@@ -60,11 +60,10 @@
             <h2 class="gym-slogan">The Welsh Answer to Muscle Beach</h2>
             <img 
                 src="./assets/images/luis-vidal-FodEsaNZs48-unsplash.jpg" 
-                alt="" 
                 class="home-hero-image"
                 alt="A photo of an open gym, where people are standing around ready to move onto the next work station in a large circle awaiting for the instructors signal to move. "
             >
-            <h2 id="join-us"><a href="join-us.html">Join Us</a></h2>
+            <a href="join-us.html"><h2 id="join-us">Join Us</h2></a>
         </div>
     </section>
 
@@ -83,49 +82,50 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/images/trust-tru-katsande-A_ftsTh53lM-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/trust-tru-katsande-A_ftsTh53lM-unsplash.jpg" class="d-block w-100" alt="A photo of a group of female gym members training together on spin bikes.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Cycling</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/anupam-mahapatra-Vz0RbclzG_w-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/anupam-mahapatra-Vz0RbclzG_w-unsplash.jpg" class="d-block w-100" alt="A photo of facing the back of a group of male and female gym members sitting down crossed legged, 
+                with the left arm on the floor streching the right side where the arm it over head stretching to the left.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Yoga</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/jonathan-borba-R0y_bEUjiOM-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/jonathan-borba-R0y_bEUjiOM-unsplash.jpg" class="d-block w-100" alt="A photo of a male gym member doing a press up, where is his being guided into the best position by a female trainer.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Personal Training</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/sule-makaroglu-YFmvjO3TP_s-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/sule-makaroglu-YFmvjO3TP_s-unsplash.jpg" class="d-block w-100" alt="A photo of a female gym member using a lat exercise machine.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Workout Machines</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/sushil-ghimire-eFx1KZhaSvo-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/sushil-ghimire-eFx1KZhaSvo-unsplash.jpg" class="d-block w-100" alt="A photo of a female gym member using free weights doing an weighted squat.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Free-Weights</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/sven-mieke-Lx_GDv7VA9M-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/sven-mieke-Lx_GDv7VA9M-unsplash.jpg" class="d-block w-100" alt="A photo of 2 female and 1 male gym members, doing a wighted lunge with a straight bar as part of a HIT workout.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">High Intensity Training</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/sherise-vd-Atohf63B8Dg-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/sherise-vd-Atohf63B8Dg-unsplash.jpg" class="d-block w-100" alt="A photo of mixed gym members undertaking a run as part of a group.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Club Running</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/omar-lopez-vsgdG95Ehyo-unsplash.jpg" class="d-block w-100" alt="">
+                <img src="./assets/images/omar-lopez-vsgdG95Ehyo-unsplash.jpg" class="d-block w-100" alt="A photo of gym members at a social evens, dressed in shirt's and dresses smiling where one person has a wine bottle to their lips drinking it.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Social Events</p>
                 </div>
@@ -185,9 +185,7 @@
                 Weekdays: 5am - 10pm <br>
                 Weekends: 6am - 9pm <br>
             </p>
-            <p class="bank-holiday-exclude">
-                <em>**Bank Holidays may vary please call us for further details.</em>
-            </p>
+            <p class="bank-holiday-exclude">**Bank Holidays may vary please call us for further details.</p>
         </div>
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank"><span class="sr-only">Hyperlink to Muscle Valley Gym Facebook page.</span><i class="fab fa-facebook"></i></a></li>
