feat: chng content to about-us page for imrpoved flow

--- a/about-us.html
+++ b/about-us.html
@@ -61,10 +61,14 @@
                     Situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym. 
                 </p>
                 <br>
-                <p>The idea of the gym came from the COVID-19 pandemic where we found that previous office based workers,
-                    were missing out on the culture of the workplace where they could engage with peers. 
-                    We thought why not combine culture with fitness, promoting all aspects of health physical and mental.
+                <p>
+                    The idea of the gym came from the COVID-19 pandemic where we found that due to the various lockdowns and 
+                    the 'new' normal meant that people were missing interacting with others without some sort of routine.
+                    We wanted to create a gym that not only looks to bring people together but would also combine routine and 
+                    fitness, were we could encourage creating comradary in a safe place.
                 </p>
+                <br>
+                <p>Thus Muscle Valley Gym was born!</p>
             </div>
             <img 
                 src="./assets/images/victor-freitas-nlZTjUZX2qo-unsplash.jpg" 
@@ -79,15 +83,17 @@
                 class="about-us-group"
             />
             <div class="services">
-                <h4>The Services we provide:</h4>
+                <h4>The Services We Provide:</h4>
                 <ul class="services-list">
+                    <li>Access to Various Workout Equipment</li>
                     <li>Group Classes</li>
                     <li>Personal Trainers</li>
                     <li>Rehabilitation & Injury Recovery</li>
                     <li>Nutritional Advise</li>
                     <li>Club Running</li>
-                    <li>Inhouse competitions</li>
-                    <li>Personal Trainers</li>
+                    <li>Inhouse Competitions</li>
+                    <li>Tailored Workout Programmes</li>
+                    <li>And much more!</li>
                 </ul>
             </div>
         </div>
