feat: add favicon to all sheets & icon to repo

--- a/join-us.html
+++ b/join-us.html
@@ -26,6 +26,8 @@
         type="text/css"
     />
 
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
     <title>Muscle Valley Gym | Join-Us</title>
 </head>
 <body class="full-viewport">
