--- a/about-us.html
+++ b/about-us.html
@@ -26,6 +26,9 @@
         type="text/css"
     />
 
+
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
     <title>Muscle Valley Gym | About-Us</title>
 </head>
 <body class="video-viewport">
