--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         rel="stylesheet" 
         type="text/css"
     />
+
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
         
     <title>Muscle Valley Gym | Home</title>
 </head>
