fix: h4 tags within p tags in the footer

--- a/join-us.html
+++ b/join-us.html
@@ -143,8 +143,8 @@
     <footer>
         <div class="gym-location"></div>
         <div class="contact-details">
+            <h4>Muscle Valley Gym</h4>  
             <p>
-                Muscle Valley Gym <br>
                 Withey Dyffryn Court <br>
                 Alder Ave <br>
                 Ystrad Mynach <br>
@@ -152,10 +152,10 @@
                 CF82 7TT <br> <br>
                 Tel: 02920 xxxxxx
             </p>
-        </div>
+          </div>
         <div class="opening-times">
+            <h4>Opening Hours</h4>
             <p>
-                <h4>Opening Hours</h4>
                 Weekdays: 5am - 10pm <br>
                 Weekends: 6am - 9pm <br>
             </p>
