feat: rm yoga from carousel due to img size & add text to meta discrpt

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym">
     <meta name="keywords" content="muscle, valley, gym">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SOCIAL MEDIA TAGS -->
     <meta property="og:type" content="business"/>
     <meta property="og:title" content="Muscle Valley Gym"/>
-    <meta property="og:description" content=""/>
+    <meta property="og:description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym"/>
 
     <meta name="twitter:title" content="Muscle Valley Gym"/>
-    <meta name="twitter:description" content=""/>
+    <meta name="twitter:description" content="Muscle Valley Gym is situated just outside of Caerphilly is the Welsh Answer to Muscle Beach, we pride ourselves on our culture and being known as being more than a gym"/>
 
         <!-- Bootstrap CSS -->
     <link 
@@ -79,20 +79,12 @@
               <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
               <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
               <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#classesAvailableCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./assets/images/trust-tru-katsande-A_ftsTh53lM-unsplash.jpg" class="d-block w-100" alt="A photo of a group of female gym members training together on spin bikes.">
                 <div class="carousel-caption d-md-block">
                   <p class="carousel-text">Cycling</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/anupam-mahapatra-Vz0RbclzG_w-unsplash.jpg" class="d-block w-100" alt="A photo of facing the back of a group of male and female gym members sitting down crossed legged, 
-                with the left arm on the floor streching the right side where the arm it over head stretching to the left.">
-                <div class="carousel-caption d-md-block">
-                  <p class="carousel-text">Yoga</p>
                 </div>
               </div>
               <div class="carousel-item">
